<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.rikkeisoft.awesome.ProfileFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_cover_photo"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:scaleType="centerCrop" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view_transparent"
                    android:layout_width="0dp"
                    android:layout_height="360dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_top_corner30"
                    android:backgroundTint="@color/white"
                    android:paddingBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_transparent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_avatar"
                        android:elevation="8dp"
                        android:padding="3dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_oval"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_username"
                        style="@style/AppText.Lato.Bold.22"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:textColor="@color/text_primary"
                        app:layout_constraintBottom_toTopOf="@id/tv_email"
                        app:layout_constraintEnd_toStartOf="@id/btn_edit_profile"
                        app:layout_constraintStart_toEndOf="@id/iv_avatar"
                        app:layout_constraintTop_toTopOf="@id/iv_avatar"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="Thái Hữu Phúc" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_email"
                        style="@style/AppText.Lato.Medium.16"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_gray_secondary"
                        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                        app:layout_constraintEnd_toEndOf="@id/tv_username"
                        app:layout_constraintStart_toStartOf="@id/tv_username"
                        app:layout_constraintTop_toBottomOf="@id/tv_username"
                        tools:text="nguyenvana@gmail.com" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_edit_profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="12dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="11dp"
                        android:src="@drawable/ic_edit_profile"
                        app:layout_constraintBottom_toBottomOf="@id/tv_username"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_username" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/color_divider"
                        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

                    <LinearLayout
                        android:id="@+id/layout_language"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_language" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/AppText.Lato.Medium.18"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="@string/language"
                            android:textColor="@color/text_primary" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/AppText.Lato.Medium.16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/text_gray_secondary"
                            tools:text="@string/vietnamese" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_next" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider_language"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/color_divide"
                        app:layout_constraintTop_toBottomOf="@id/layout_language" />

                    <LinearLayout
                        android:id="@+id/layout_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider_language">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_notification" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/AppText.Lato.Medium.18"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="@string/notification"
                            android:textColor="@color/text_primary" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_next" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider_notification"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/color_divide"
                        app:layout_constraintTop_toBottomOf="@id/layout_notification" />

                    <LinearLayout
                        android:id="@+id/layout_version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider_notification">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_version" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/AppText.Lato.Medium.18"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="@string/version"
                            android:textColor="@color/text_primary" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_version"
                            style="@style/AppText.Lato.Medium.16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_gray_secondary"
                            tools:text="1.0.0" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider_version"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:background="@color/color_divider"
                        app:layout_constraintTop_toBottomOf="@id/layout_version" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_logout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider_version" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_logout"
                        style="@style/AppText.Lato.Medium.18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:padding="12dp"
                        android:text="@string/logout"
                        android:textColor="@color/color_red"
                        app:layout_constraintBottom_toBottomOf="@id/ic_logout"
                        app:layout_constraintStart_toEndOf="@id/ic_logout"
                        app:layout_constraintTop_toTopOf="@id/ic_logout" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="400dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_logout" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>